# sadwpaklsodkowkawd2412

./: .env.example  .env.squarecloud  .env.squarecloud.example  .gitignore  .prettierignore  .prettierrc  DATABASE.md  ESTRUTURA.md  NETLIFY.md  README.md  SECURITY.md  SQUARECLOUD.md  TEST-LOCAL.md  auth.js  dev-server.js  drizzle.config.js  eslint.config.js  message-cache.js  package-lock.json  package.json  server.js  squarecloud.app  voice-backend.js  ws.js
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-pages.yml
api/: health.js
api/account/: delete.js
api/friend-requests/: index.js
api/friends/: [userId].js
api/lib/: db.js
backend/: README.md  message-cache.js  server.js
backend/config/: database.js
backend/controllers/: README.md
backend/data/: cache_backup.json
backend/db/: index.js  schema.js
backend/middlewares/: README.md
backend/routes/: README.md
backend/services/: messageCache.js  messageCacheService.js
backend/src/: README.md  config.js
backend/uploads/: .gitkeep
crates/liberty-core/: Cargo.toml
crates/liberty-crypto/: Cargo.toml
crates/liberty-crypto/src/: encryption.rs  jwt.rs  lib.rs  password.rs
crates/liberty-proto/: Cargo.toml
crates/liberty-server/: Cargo.toml
crates/liberty-server/src/: auth.rs  db.rs  main.rs  state.rs  ws.rs
crates/liberty-server/src/api/: auth.rs  bans.rs  dms.rs  invites.rs  members.rs  messages.rs  mod.rs  reactions.rs  relationships.rs  servers.rs  users.rs
db/: index.js  init.js  schema.js  schema.sql
docs/: DATABASE.md  LIBERTY-v1.0.0.1-Report.md  README.md  SECURITY.md  SQUARECLOUD.md
frontend/: 404.html  README.md  index.html
frontend/css/: README.md  call-neo.css  components.css  liberty.css  main.css  mobile.css  themes.css  voice-activity.css
frontend/js/: README.md  api.js  app.js  call-manager.version  call-system.js  chat-messages-react.js  dm-unread-react.js  logo-fallback.js  mentions-popover.js  websocket.js
lib/: db.js  sanitize.js
liberty/: Cargo.toml  README.md
liberty/crates/liberty-proto/: Cargo.toml
liberty/desktop/: build_exe.bat  globe_widget.py  main.py  requirements.txt  run.bat  run.sh
liberty/desktop_cpp/: CMakeLists.txt  run.sh
liberty/desktop_cpp/src/: chat_widget.h  globe_gl.c  globe_gl.h  login_window.cpp  login_window.h  main_window.cpp  main_window.h  splash_screen.cpp  splash_screen.h  styles.cpp  styles.h
liberty/fstar/: LibertyCrypto.fst  LibertyProtocol.fst
liberty/native/: liberty_perf.c  liberty_perf.h
liberty/server/: README.md  db.js  index.js  liberty-data.json  package-lock.json  package.json
liberty/static/: index.html
liberty/web/: 404.html  index.html
liberty/web-react/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
netlify/functions/: api.js
public/: _redirects  index.html
public/css/: style.css
routes/: api.js
scripts/: serve-static.js
src/: config.js
static/: 404.html  index.html
voiceroom/: .env.example  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.base.json
(+124 files in other folders)
